# Kascreech

./: .gitattributes  .gitignore  Dockerfile  README.md  deploy.sh
client/: package-lock.json  package.json  ws_test.md
client/public/: index.html  privacy.html  terms.html
client/src/: App.tsx  Home.tsx  Library.tsx  LobbyLoading.tsx  index.tsx  suffix.ts  types.d.ts
client/src/host/: Host.tsx  HostQuestion.tsx  Leaderboard.tsx  Lobby.tsx  Question.tsx
client/src/player/: Finish.tsx  GuessMade.tsx  Player.tsx  PlayerLobby.tsx  PlayerQuestion.tsx  Result.tsx
client/src/styles/: App.scss  Finish.scss  GuessMade.scss  Home.scss  HostQuestion.scss  Importer.scss  Leaderboard.scss  Library.scss  Lobby.scss  PlayerLobby.scss  PlayerQuestion.scss  Result.scss  index.scss
server/: Cargo.toml  layout.md  package-lock.json  package.json  server.js  server.py
server/quizzes/: default.json  topolocheese.json
server/src/: command.rs  database.rs  err.rs  game.rs  host.rs  join.rs  kahoot_api.rs  main.rs  mon.rs  new_game.rs  player.rs  quiz.rs  server_types.rs  types.rs
server/src/api/: featured.rs  import.rs  list.rs  mod.rs  not_once_cell.rs  recent.rs  search.rs
server/src/host/: kahoot_api.rs  mod.rs  not_once_cell.rs  points.rs
server/src/player/: mod.rs
web/: chungus.html  client.html  index.html  tsconfig.json
web/compiled/: chungus.js  client.js  uuid.js
web/compiled/tests/: chungus_test.js  client_test.js
web/scripts/: chungus.js  chungus.ts  client.js  client.ts  types.ts  uuid.js  uuid.ts
web/styles/: chungus.css  client.css
(+4 files in other folders)
