[package]
name = "kascreech"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "^1.8", features = ["full"] }
tokio-tungstenite = "*"
tokio-stream = "*"

ureq = { version = "^2.1", features = ["json"] }

serde = { version = "^1", features = ["derive", "rc"] }
serde_json = "*"

dashmap = "^4.0"
fastrand = "^1.4"
once_cell = "^1.8"
futures = "^0.3"

log = "^0.4"
simple-log = "*"